Get iterable content using __iter__() and __next__().

BUG: 369363
Supports unpacking and iterating over custom sequence types.
See tests for examples (by Nicolás Alvarez).

Returning `iter(builtin_container)` isn't handled usefully
 because they use docstring cheats with no real return values.

Differential Revision: https://phabricator.kde.org/D3540